quest-sys/QuEST/QuEST/include/QuEST.h

    
typedef struct {
    char* buffer;       
    int bufferSize;     
    int bufferFill;     
    int isLogging;      
} QASMLogger;
typedef struct ComplexArray
{
    qreal *real; 
    qreal *imag;
} ComplexArray;
 enum pauliOpType {PAULI_I=0, PAULI_X=1, PAULI_Y=2, PAULI_Z=3};
typedef struct Complex
{
    qreal real;
    qreal imag;
} Complex;
typedef struct ComplexMatrix2
{
    qreal real[2][2];
    qreal imag[2][2];
} ComplexMatrix2;
typedef struct PauliHamil 
{
    enum pauliOpType* pauliCodes;
    qreal* termCoeffs;
    int numSumTerms;
    int numQubits;
} PauliHamil;
typedef struct DiagonalOp
{
    int numQubits;
    long long int numElemsPerChunk;
    int numChunks;
    int chunkId;
    qreal *real;
    qreal *imag;
    ComplexArray deviceOperator;
} DiagonalOp;
typedef struct Qureg
{
    int isDensityMatrix;
    int numQubitsRepresented;
    int numQubitsInStateVec;
    long long int numAmpsPerChunk;
    long long int numAmpsTotal;
    int chunkId;
    int numChunks;
    ComplexArray stateVec; 
    ComplexArray pairStateVec;
    ComplexArray deviceStateVec;
    qreal *firstLevelReduction, *secondLevelReduction;
    QASMLogger* qasmLog;
} Qureg;
typedef struct QuESTEnv
{
    int rank;
    int numRanks;
    unsigned long int* seeds;
    int numSeeds;
} QuESTEnv;
Qureg createQureg(int numQubits, QuESTEnv env);
PauliHamil createPauliHamil(int numQubits, int numSumTerms);
void destroyPauliHamil(PauliHamil hamil);
PauliHamil createPauliHamilFromFile(char* fn);
DiagonalOp createDiagonalOp(int numQubits, QuESTEnv env);
void destroyDiagonalOp(DiagonalOp op, QuESTEnv env);
void syncDiagonalOp(DiagonalOp op);
void initDiagonalOp(DiagonalOp op, qreal* real, qreal* imag);
void initDiagonalOpFromPauliHamil(DiagonalOp op, PauliHamil hamil);
DiagonalOp createDiagonalOpFromPauliHamilFile(char* fn, QuESTEnv env);
void setDiagonalOpElems(DiagonalOp op, long long int startInd, qreal* real, qreal* imag, long long int numElems);
void applyDiagonalOp(Qureg qureg, DiagonalOp op);
Complex calcExpecDiagonalOp(Qureg qureg, DiagonalOp op);
void unitary(Qureg qureg, int targetQubit, ComplexMatrix2 u);
qreal calcExpecPauliHamil(Qureg qureg, PauliHamil hamil, Qureg workspace);
void applyPauliHamil(Qureg inQureg, PauliHamil hamil, Qureg outQureg);
void invalidQuESTInputError(const char* errMsg, const char* errFunc);