quest-sys/src/bindings.rs

extern "C" {
    #[doc = " Creates a ::DiagonalOp representing a diagonal operator on the"]
    #[doc = " full Hilbert space of a ::Qureg."]
    #[doc = ""]
    #[doc = " The resulting operator need not be unitary nor Hermitian, and can be"]
    #[doc = " applied to any ::Qureg of a compatible number of qubits."]
    #[doc = ""]
    #[doc = " This function allocates space for \\f$2^{\\text{numQubits}}\\f$ complex amplitudes,"]
    #[doc = " which are initially zero. This is the same cost as a local state-vector of equal"]
    #[doc = " number of qubits; see the Serial section of createQureg()."]
    #[doc = " Note that this is a <em>paralell</em> data-type, so its"]
    #[doc = " ultimate memory costs depend on the hardware backends, as elaborated below."]
    #[doc = ""]
    #[doc = " The operator elements should be modified with initDiagonalOp() and setDiagonalOpElems(),"]
    #[doc = " and must be later freed with destroyDiagonalOp()."]
    #[doc = ""]
    #[doc = " ### GPU"]
    #[doc = ""]
    #[doc = " In GPU-accelerated mode, this function also creates additional equally-sized"]
    #[doc = " persistent memory on the GPU."]
    #[doc = " If you wish to modify the operator elements directly (in lieu of setDiagonalOpElems()),"]
    #[doc = " you must thereafter call syncDiagonalOp() to update the operator stored in VRAM."]
    #[doc = ""]
    #[doc = " For example,"]
    #[doc = " ```"]
    #[doc = " DiagonalOp op = createDiagonalOp(4, env);"]
    #[doc = " for (long long int i=0; i<op.numElemsPerChunk; i++) {"]
    #[doc = "     op.real[i] = rand();"]
    #[doc = "     op.imag[i] = rand();"]
    #[doc = " }"]
    #[doc = " syncDiagonalOp(op);"]
    #[doc = " ```"]
    #[doc = ""]
    #[doc = " ### Distribution"]
    #[doc = ""]
    #[doc = " In distributed mode, the memory for the diagonal operator is divided evenly"]
    #[doc = " between the \\f$N\\f$ available nodes, such that each node contains only"]
    #[doc = " \\f$2^{\\text{numQubits}}/N\\f$ complex values. This is assigned to"]
    #[doc = " DiagonalOp.numElemsPerChunk."]
    #[doc = ""]
    #[doc = " Users must therefore exercise care in modifying DiagonalOp.real and DiagonalOp.imag"]
    #[doc = " directly."]
    #[doc = ""]
    #[doc = " For example, the following is valid code when when distributed between <b>N = 2</b> nodes:"]
    #[doc = " ```"]
    #[doc = "      // create diag({1,2,3,4,5,6,7,8, 9,10,11,12,13,14,15,16})"]
    #[doc = "      int numQubits = 4;"]
    #[doc = "      DiagonalOp op = createDiagonalOp(numQubits4, env);"]
    #[doc = "      for (int i=0; i<8; i++) {"]
    #[doc = "          if (env.rank == 0)"]
    #[doc = "              op.real[i] = (i+1);"]
    #[doc = "          if (env.rank == 1)"]
    #[doc = "              op.real[i] = (i+1+8);"]
    #[doc = "      }"]
    #[doc = " ```"]
    #[doc = " \\n"]
    #[doc = ""]
    #[doc = ""]
    #[doc = " @see"]
    #[doc = " - createDiagonalOpFromPauliHamilFile()"]
    #[doc = " - setDiagonalOpElems()"]
    #[doc = " - initDiagonalOp()"]
    #[doc = " - syncDiagonalOp()"]
    #[doc = " - applyDiagonalOp()"]
    #[doc = " - calcExpecDiagonalOp()"]
    #[doc = " - destroyDiagonalOp()"]
    #[doc = ""]
    #[doc = " @ingroup type"]
    #[doc = " @returns a dynamic DiagonalOp instance initialised to diag(0,0,...)."]
    #[doc = " @param[in] numQubits number of qubits which inform the Hilbert dimension of the operator."]
    #[doc = " @param[in] env the ::QuESTEnv"]
    #[doc = " @throws invalidQuESTInputError()"]
    #[doc = " - if \\p numQubits <= 0"]
    #[doc = " - if \\p numQubits is so large that the number of elements cannot fit in a long long int type,"]
    #[doc = " - if in distributed mode, there are more nodes than elements in the operator"]
    #[doc = " @throws exit"]
    #[doc = " - if the memory could not be allocated"]
    #[doc = " @author Tyson Jones"]
    pub fn createDiagonalOp(numQubits: ::std::os::raw::c_int, env: QuESTEnv) -> DiagonalOp;
}
extern "C" {
    #[doc = " Destroys a ::DiagonalOp created with createDiagonalOp(), freeing its memory."]
    #[doc = ""]
    #[doc = " @see"]
    #[doc = " - createDiagonalOp()"]
    #[doc = ""]
    #[doc = " @ingroup type"]
    #[doc = " @param[in] op the ::DiagonalOp to destroy"]
    #[doc = " @param[in] env the ::QuESTEnv"]
    #[doc = " @throws invalidQuESTInputError()"]
    #[doc = " - if \\p op was not previously created"]
    #[doc = " @author Tyson Jones"]
    pub fn destroyDiagonalOp(op: DiagonalOp, env: QuESTEnv);
}
extern "C" {
    #[doc = " Overwrites the entire ::DiagonalOp \\p op with the given \\p real and \\p imag"]
    #[doc = " complex elements."]
    #[doc = ""]
    #[doc = " Both \\p real and \\p imag must have length equal to <b>pow(2, </b>`op.numQubits`<b>)</b>."]
    #[doc = ""]
    #[doc = " In GPU mode, this updates both the RAM (\\p op.real and \\p op.imag) <em>and</em>"]
    #[doc = " persistent GPU memory; there is no need to call syncDiagonalOp() afterward."]
    #[doc = ""]
    #[doc = " In distributed mode, this function assumes \\p real and \\p imag exist fully on every"]
    #[doc = " node. For ::DiagonalOp which are too large to fit into a single node, use"]
    #[doc = " setDiagonalOpElems() or syncDiagonalOp()."]
    #[doc = ""]
    #[doc = " @see"]
    #[doc = " - setDiagonalOpElems()"]
    #[doc = " - initDiagonalOpFromPauliHamil()"]
    #[doc = ""]
    #[doc = " @ingroup type"]
    #[doc = " @param[in,out] op the diagonal operator to modify"]
    #[doc = " @param[in] real the real components of the full set of new elements"]
    #[doc = " @param[in] imag the imaginary components of the full set of new elements"]
    #[doc = " @throws invalidQuESTInputError()"]
    #[doc = " - if \\p op was not created"]
    #[doc = " @throws segmentation-fault"]
    #[doc = " - if either \\p real or \\p imag have length smaller than <b>pow(2, </b>`op.numQubits`<b>)</b>"]
    #[doc = " @author Tyson Jones"]
    pub fn initDiagonalOp(op: DiagonalOp, real: *mut f64, imag: *mut f64);
}
extern "C" {
    #[doc = " Populates the diagonal operator \\p op to be equivalent to the given Pauli"]
    #[doc = " Hamiltonian \\p hamil, assuming \\p hamil contains only `PAULI_Z` operators."]
    #[doc = ""]
    #[doc = " Given a ::PauliHamil \\p hamil featuring only `PAULI_Z` and `PAULI_I`, with"]
    #[doc = " term coefficients \\f$\\{\\lambda_j\\}\\f$, which"]
    #[doc = " hence has form"]
    #[doc = " \\f["]
    #[doc = "      \\begin{aligned}"]
    #[doc = "      \\text{hamil} &= \\sum\\limits_j^{\\text{numSumTerms}} \\lambda_j"]
    #[doc = "                      \\bigotimes\\limits_{k_j} \\hat{Z}_k \\\\"]
    #[doc = "      &\\equiv \\begin{pmatrix}"]
    #[doc = "              r_1 \\\\ & r_2 \\\\ & & r_3 \\\\ & & & \\ddots \\\\ & & & & r_{2^{\\,\\text{numQubits}}}"]
    #[doc = "          \\end{pmatrix},"]
    #[doc = "      \\end{aligned}"]
    #[doc = " \\f]"]
    #[doc = " this function modifies \\p op to"]
    #[doc = " \\f["]
    #[doc = "      \\text{op} \\; \\rightarrow \\; \\text{diag}"]
    #[doc = "          \\big( \\; r_1, \\; r_2, \\; r_3, \\; \\dots, \\; r_{2^{\\,\\text{numQubits}}} \\, \\big),"]
    #[doc = " \\f]"]
    #[doc = " where the real amplitudes have form"]
    #[doc = " \\f["]
    #[doc = "       r_i = \\sum\\limits_j \\, s_{ij} \\, \\lambda_j, \\;\\;\\;\\; s_{ij} = \\pm  1 \\,."]
    #[doc = " \\f]"]
    #[doc = " This is useful since calculations with ::DiagonalOp are significantly faster than"]
    #[doc = " the equivalent calculations with a general ::PauliHamil. For example,"]
    #[doc = " applyDiagonalOp() requires a factor `numSumTerms * numQubits` fewer operations"]
    #[doc = " than applyPauliHamil()."]
    #[doc = ""]
    #[doc = " > In distributed mode, each node will contain only a sub-partition of the full diagonal matrix."]
    #[doc = " > In GPU mode, both the CPU and GPU memory copies of \\p op will be updated, so there"]
    #[doc = " > is no need to call syncDiagonalOp() afterward."]
    #[doc = ""]
    #[doc = " @see"]
    #[doc = " - createDiagonalOp()"]
    #[doc = " - createPauliHamil()"]
    #[doc = " - createDiagonalOpFromPauliHamilFile()"]
    #[doc = " - initDiagonalOp()"]
    #[doc = " - setDiagonalOpElems()"]
    #[doc = ""]
    #[doc = " @ingroup type"]
    #[doc = " @param[in,out] op an existing ::DiagonalOp (e.g. created with createDiagonalOp()) to modify"]
    #[doc = " @param[in] hamil a ::PauliHamil of equal dimension to \\p op, containing only `PAULI_Z` and `PAULI_I` operators"]
    #[doc = " @throws invalidQuESTInputError()"]
    #[doc = " - if \\p hamil has invalid parameters (\\p numQubits <= 0, \\p numSumTerms <= 0)"]
    #[doc = " - if \\p op and \\p hamil have unequal dimensions"]
    #[doc = " - if \\p hamil contains any operator other than `PAULI_Z` and `PAULI_I`"]
    #[doc = " @throws segmentation-fault"]
    #[doc = " - if either \\p op or \\p hamil have not been already created"]
    #[doc = " @author Tyson Jones"]
    #[doc = " @author Milos Prokop (serial prototype)"]
    pub fn initDiagonalOpFromPauliHamil(op: DiagonalOp, hamil: PauliHamil);
}
extern "C" {
    #[doc = " Creates and initialiases a diagonal operator from the Z Pauli Hamiltonian encoded in"]
    #[doc = " file with filename \\p fn."]
    #[doc = ""]
    #[doc = " This is a convenience function to prepare a diagonal operator from a plaintext"]
    #[doc = " description of an all-Z Pauli Hamiltonian. The returned ::DiagonalOp is a"]
    #[doc = " distributed data structure, and significantly faster to use (through functions"]
    #[doc = " like calcExpecDiagonalOp()) than ::PauliHamil functions (like calcExpecPauliHamil())."]
    #[doc = ""]
    #[doc = " - See createDiagonalOp() for info about the returned operator."]
    #[doc = " - See initDiagonalOpFromPauliHamil() for info about the initialised state."]
    #[doc = " - See createPauliHamilFromFile() for info about the required file format."]
    #[doc = ""]
    #[doc = " > The returned ::DiagonalOp must be later freed with destroyDiagonalOp()."]
    #[doc = " > Note a ::PauliHamil from \\p fn is temporarily internally created."]
    #[doc = ""]
    #[doc = " This function is equivalent to"]
    #[doc = " ```"]
    #[doc = " // produce diagonal matrix d"]
    #[doc = " PauliHamil h = createPauliHamilFromFile(fn);"]
    #[doc = " DiagonalOp d = createDiagonalOp(h.numQubits, env);"]
    #[doc = " initDiagonalOpFromPauliHamil(d, h);"]
    #[doc = " destroyPauliHamil(h);"]
    #[doc = " ```"]
    #[doc = " <br>"]
    #[doc = ""]
    #[doc = " @see"]
    #[doc = " - initDiagonalOpFromPauliHamil()"]
    #[doc = " - createPauliHamilFromFile()"]
    #[doc = " - createDiagonalOp()"]
    #[doc = " - destroyDiagonalOp()"]
    #[doc = ""]
    #[doc = " @ingroup type"]
    #[doc = " @param[in] fn filename of a plaintext file encoding an all-Z Pauli Hamiltonian"]
    #[doc = " @param[in] env the session ::QuESTEnv"]
    #[doc = " @returns a created ::DiagonalOp equivalent to the Hamiltonian in \\p fn"]
    #[doc = " @throws invalidQuESTInputError()"]
    #[doc = " - if file \\p fn cannot be read"]
    #[doc = " - if file \\p fn does not encode a valid ::PauliHamil"]
    #[doc = " - if the encoded ::PauliHamil consists of operators other than `PAULI_Z` and `PAULI_I`"]
    #[doc = " @author Tyson Jones"]
    #[doc = " @author Milos Prokop (serial prototype)"]
    pub fn createDiagonalOpFromPauliHamilFile(
        fn_: *mut ::std::os::raw::c_char,
        env: QuESTEnv,
    ) -> DiagonalOp;
}
